--- a/Views/Interface/SuccessStoryButton.xaml
+++ b/Views/Interface/SuccessStoryButton.xaml
@@ -1,12 +1,15 @@
 ﻿<Button x:Class="SuccessStory.Views.Interface.SuccessStoryButton"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:SuccessStory.Views.Interface"
-             mc:Ignorable="d" Height="40">
+        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+        xmlns:local="clr-namespace:SuccessStory.Views.Interface"
+        xmlns:converters="clr-namespace:PluginCommon.PlayniteResources.Converters;assembly=PluginCommon"
+        mc:Ignorable="d" Height="40">
 
     <Button.Resources>
+        <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
+        <converters:InvertedBooleanToVisibilityConverter x:Key="InvertedBooleanToVisibilityConverter" />
         <FontFamily x:Key="font">pack://application:,,,/PluginCommon;component/Resources/font.ttf#font</FontFamily>
     </Button.Resources>
 
@@ -44,7 +47,9 @@
     </Button.Style>
 
     <Grid>
-        <TextBlock Name="PART_ButtonIcon" Text="" FontFamily="{StaticResource font}" />
-        <TextBlock Name="PART_ButtonText"  Text="{DynamicResource LOCSuccessStory}" />
+        <TextBlock Name="PART_ButtonIcon" Text="" FontFamily="{StaticResource font}" 
+                   Visibility="{Binding EnableIntegrationButtonJustIcon, Converter={StaticResource BooleanToVisibilityConverter}}" />
+        <TextBlock Name="PART_ButtonText"  Text="{DynamicResource LOCSuccessStory}"
+                   Visibility="{Binding EnableIntegrationButtonJustIcon, Converter={StaticResource InvertedBooleanToVisibilityConverter}}" />
     </Grid>
 </Button>
