--- a/Views/Interface/SuccessStoryToggleButtonDetails.xaml
+++ b/Views/Interface/SuccessStoryToggleButtonDetails.xaml
@@ -1,10 +1,10 @@
 ﻿<ToggleButton x:Class="SuccessStory.Views.Interface.SuccessStoryToggleButtonDetails"
               xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:SuccessStory.Views.Interface"
-             mc:Ignorable="d" Width="150" Height="40">
+              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+              xmlns:local="clr-namespace:SuccessStory.Views.Interface"
+              mc:Ignorable="d" MinWidth="150" Height="40">
 
     <ToggleButton.Resources>
         <FontFamily x:Key="font">pack://application:,,,/PluginCommon;component/Resources/font.ttf#font</FontFamily>
@@ -180,5 +180,4 @@
             </ProgressBar.Style>
         </ProgressBar>
     </Grid>
-
 </ToggleButton>
