--- a/Views/SuccessStorySettingsView.xaml
+++ b/Views/SuccessStorySettingsView.xaml
@@ -552,6 +552,9 @@
                                     <CheckBox Grid.Column="0" Grid.Row="1" IsChecked="{Binding IntegrationShowAchievements}" VerticalAlignment="Center">
                                         <Label Content="{DynamicResource LOCSuccessStoryIntegrationShowAchievements}" />
                                     </CheckBox>
+                                    <CheckBox Grid.Column="2" Grid.Row="1" IsChecked="{Binding IntegrationShowUserStats}" VerticalAlignment="Center">
+                                        <Label Content="{DynamicResource LOCSuccessStoryIntegrationShowUserStats}" />
+                                    </CheckBox>
 
                                     <CheckBox Grid.Column="0" Grid.Row="2" IsChecked="{Binding IntegrationShowAchievementsCompactUnlocked}" VerticalAlignment="Center">
                                         <Label Content="{DynamicResource LOCSuccessStoryIntegrationShowAchievementsCompactUnlocked}" />
